[blog] Display posts summary using excerpt

--- a/_posts/2016-10-04-docker-intro.html
+++ b/_posts/2016-10-04-docker-intro.html
@@ -427,11 +427,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="content">
 <div class="sect1">
-<h2 id="__strong_containerisation_with_docker_strong"><strong>Containerisation with Docker</strong></h2>
 <div class="sectionbody">
 <div class="paragraph text-justify">
-<p>When you use Docker your deployment unit becomes a container. The goal is to reduce the gap between Dev and Ops, with a light and portable packaging, easier to install. The environment remains the same anywhere, both in dev and prod. The deliverable will contain the binary (jar, war, deb, …) and everything that is required to run the application, namely the OS. The deployment will be handled by the container technology. Different versions of the same technology (Java 1.6, 1.7, 1.8, …) can be hosted in the same machine. With this level of portability we are far of being hostage of “it works on my machine” and ghost bugs that are difficult to reproduce. It enables developers to explore new areas at a lower price with quick feedback. We can easily pull a ready-to-use container, experiment with it and get rid of it in record time.</p>
-</div>
+	<p>When you use Docker your deployment unit becomes a container. The goal is to reduce the gap between Dev and Ops, with a light and portable packaging, easier to install. The environment remains the same anywhere, both in dev and prod. The deliverable will contain the binary (jar, war, deb, …) and everything that is required to run the application, namely the OS. The deployment will be handled by the container technology.<!--excerpt--> Different versions of the same technology (Java 1.6, 1.7, 1.8, …) can be hosted in the same machine. With this level of portability we are far of being hostage of “it works on my machine” and ghost bugs that are difficult to reproduce. It enables developers to explore new areas at a lower price with quick feedback. We can easily pull a ready-to-use container, experiment with it and get rid of it in record time.</p>
+</div> 
 <div class="paragraph text-justify">
 <p>The success of Docker is linked to the fact that it provides a new way of isolating process by containerisation. Hardware virtualisation technologies, such as Hypervisors 1 and 2, used to provide the same solution, but without being popular, because of the heavy workload involved in their implementation. Indeed (In fact) containerisation predates the tool, but Docker has the merit to democratise its utilisation by making the implementation easier.</p>
 </div>
